# rust-web-api

./: .env  Cargo.toml  README.md  run.sh
src/: main.rs
src/index/: mod.rs  model.rs  routes.rs
src/user/: routes.rs
