[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"

serde = "1.0"
serde_json = "1.0"

# For auto-reloading
listenfd = "0.4.0"

dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
nix = "0.23.1"